manifest/keycloak-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-postgres
  namespace: go-project
spec:
  replicas: 1
  serviceName: keycloak-postgres
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          resources:
            requests:
              cpu: "0.25"
              memory: "256Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  namespace: go-project
spec:
  selector:
    app: keycloak-postgres
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
