manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: post-service-ingress
  namespace: go-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: post.go-project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 8089

    - host: keycloak.go-project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080

    - host: grafana.go-project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
